atualizações de rotas

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "start": "node --env-file .env --experimental-strip-types src/server.ts",
     "dev": "node --env-file .env --experimental-strip-types --watch src/server.ts",
-    "db:seed": "node --env-file .env --experimental-strip-types src/db/seed.ts"
+    "db:seed": "node --env-file .env --experimental-strip-types src/db/seed.ts",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate"
   },
   "keywords": [],
   "author": "",
