--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ PORT=3333
 
 #DATABASE
 DATABASE_URL="postgresql://docker:docker@localhost:5432/agents"
+
+#GEMINI API KEY
+GEMINI_API_KEY="DHHTTHJIDJSNNVKJSN"
